--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <title> Testar Jogos </title>
 </head>
 <body>
-<a href="C:\Users\erick\FUCK torio\Builds\0.1.rar" download>Baixar Jogo</a>
+<a href="Games\0.1.rar" download>Baixar Jogo</a>
 </body>
 </html>
